--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,13 @@ spring:
   jpa:
     database: h2
     defer-datasource-initializtion: true
-    show-sql: true
+    #show-sql: true
     hibernate:
       ddl-auto: create-drop
     properties:
       hibernate:
-        use_sql_comments: true
-        format_sql: true
+        #use_sql_comments: true
+        #format_sql: true
         default_batch_fetch_size: 100
     open-in-view: false
   h2:
@@ -17,6 +17,24 @@ spring:
   datasource:
     url: jdbc:h2:mem:yammy
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          socketFactory.class: javax.net.ssl.SSLSocketFactory
+          auth: true
+          starttls:
+            enable: true
+
+  redis:
+    host: ${REDIS_HOST}
+    port: ${REDIS_PORT}
+
+
 logging:
   level:
     org:
@@ -24,3 +42,13 @@ logging:
         type:
           descriptor:
             sql: trace
+
+user:
+  join:
+    verification_code_expire_second: 300
+    verification_code_len: 8
+    verification_code_expire_second_after_verification: 1200
+
+jwt:
+  secret_key: ${JWT_SECRET_KEY}
+  access_token_expire_minute: 30
