update : 로컬 업로드 시스템에 대해 업로드한 자원을 static 자원으로 제공하도록 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,4 +63,4 @@ upload:
   local:
     resource_host: ${RESOURCE_HOST}
     upload_root: ${UPLOAD_ROOT}
-    urlPath: upload/
+    urlPath: /upload/
