--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,13 @@
 spring:
-  jpa:
-    database: h2
-    defer-datasource-initializtion: true
-    #show-sql: true
-    hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        #use_sql_comments: true
-        #format_sql: true
-        default_batch_fetch_size: 100
-    open-in-view: false
-  h2:
-    console:
-      enabled: true
-  datasource:
-    url: jdbc:h2:mem:yammy
+  profiles:
+    active:
+      - dev
+    group:
+      dev:
+        - db-dev
+        - db-h2
+    include:
+      - db
 
   mail:
     host: smtp.gmail.com
@@ -30,24 +22,12 @@ spring:
           starttls:
             enable: true
 
-  redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-
-
   servlet:
     multipart:
       max-file-size:
         10MB
       max-request-size:
         10MB
-
-  level:
-    org:
-      hibernate:
-        type:
-          descriptor:
-            sql: trace
 
 user:
   join:
