config : mysql 관련 설정, profile 추가
build.gradle 설정
db-mysql profile 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 spring:
   profiles:
     active:
-      - dev
+      - dev2
     group:
       dev:
         - db-dev
         - db-h2
+        - upload-local
+      dev2:
+        - db-dev
+        - db-mysql
         - upload-local
     include:
       - db
