--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -40,4 +40,15 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:yammy
+    url: jdbc:h2:mem:yummy
+---
+# db-mysql 설정
+spring:
+  config:
+    activate:
+      on-profile: 'db-mysql'
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${MYSQL_URL}
+    username: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASSWORD}
