--- a/src/main/resources/application-upload.yml
+++ b/src/main/resources/application-upload.yml
@@ -7,3 +7,20 @@ spring:
     resource_host: ${RESOURCE_HOST}
     upload_root: ${UPLOAD_ROOT}
     urlPath: /upload/
+---
+spring:
+  config:
+    activate:
+      on-profile: 'upload-aws_s3'
+cloud:
+  aws:
+    s3:
+      bucket: ${AWS_S3_BUCKET_NAME}
+    credentials:
+      access-key: ${AWS_S3_ACCESS_KEY}
+      secret-key: ${AWS_S3_SECRET_KEY}
+    region:
+      static: ${AWS_S3_REGION}
+      auto: false
+    stack:
+      auto: false
