--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'mysql:mysql-connector-java'
+	implementation 'org.flywaydb:flyway-core'
 
 	//스프링 logging 기본 slf4j구현체인 logback을 log4j2로 변경
 	implementation("org.springframework.boot:spring-boot-starter-log4j2")
