--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -8,6 +8,9 @@ spring:
   redis:
     host: ${REDIS_HOST}
     port: ${REDIS_PORT}
+  flyway:
+    locations: classpath:db/migration
+    enabled: true
 ---
 #db dev 설정. debug 관련 sql표시 설정, hibernate ddl 설정
 spring:
